# src/routes/tour.route.js
@@ -7,6 +7,11 @@ const tourRoutes = new Router();
 tourRoutes.get("/passeio", TourController.findAll_tours);
 tourRoutes.get("/passeio/avaliacao/:id", auth, TourController.findOne_review);
 tourRoutes.post("/passeio", auth, TourController.create_tour);
+tourRoutes.post(
+  "/passeio/realizado",
+  auth,
+  TourController.create_usersWhoTookTour
+);
 tourRoutes.post("/passeio/reserva", auth, TourController.create_booking);
 tourRoutes.post("/passeio/avaliacao", auth, TourController.create_review);
 tourRoutes.put("/passeio/avaliacao/:id", auth, TourController.update_review);
